# rust_axum_template

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
bruno/: Health.bru  bruno.json
docs/superpowers/specs/: 2026-07-11-rust-axum-vsa-starter-design.md
migrations/: 0001_init.sql
seeds/: dev.sql
src/: app.rs  lib.rs  main.rs  openapi.rs
src/domains/: mod.rs
src/features/: mod.rs
src/features/health/: handler.rs  mod.rs
src/graphql/: mod.rs  query.rs
src/shared/: config.rs  db.rs  error.rs  mod.rs  state.rs
src/system/: health.rs  mod.rs
tests/: architecture.rs  health.rs
