[package]
name = "rust_axum_template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower-http = { version = "0.7.0", features = ["trace", "timeout", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
